force-app/main/default/objects/Agent_Step_Event__e/Agent_Step_Event__e.object-meta.xml
<CustomObject>
    <description>Passes agent step instructions to event trigger.</description>
    <label>Agent Step Event</label>
    <pluralLabel>Agent Step Events</pluralLabel>
</CustomObject>