force-app/main/default/objects/Agent_Step_Event__e/fields/Agent_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Developer_Name__c</fullName>
    <label>Agent Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>