force-app/main/default/objects/Agent_Step_Event__e/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <description>&apos;LLM&apos; or &apos;Tool&apos;</description>
    <label>Step Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>