force-app/main/default/objects/Agent_Step_Event__e/fields/Tool_Args_Json__c.field-meta.xml
<CustomField>
    <fullName>Tool_Args_Json__c</fullName>
    <label>Tool Args Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>