force-app/main/default/objects/Agent_Step_Event__e/fields/Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_Name__c</fullName>
    <label>Tool Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>