force-app/main/default/objects/Agent_Step_Event__e/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>